--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
     <header>
         <div class="header-content">
             <div class="logo">
-    <img src="images/logo/logo.png" alt="Cinnamon City Hotel">
+    <img src="Images/logo/logo.png" alt="Cinnamon City Hotel">
 </div>
             <nav>
                 <a href="#home">Home</a>
