--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinnamon City Hikkaduwa </title>
+    <link rel="icon" type="image/x-icon" href="/Images/logo/logo.png">
     <style>
         * {
             margin: 0;
@@ -1005,3 +1006,4 @@ The Cinnamon City Hikkaduwa Team</p>
 </body>
 
 </html>
+
