--- a/index.html
+++ b/index.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:title" content="Cinnamon City Hikkaduwa">
+<meta property="og:description" content="Discover the future of tourism">
+<meta property="og:image" content="https://pesaradam.github.io/Cinnamoncity-Hikkaduwa/Images/Banner.jpg">
+<meta property="og:url" content="https://pesaradam.github.io/Cinnamoncity-Hikkaduwa/">
+<meta name="twitter:card" content="summary_large_image">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinnamon City Hikkaduwa </title>
     <link rel="icon" type="image/x-icon" href="/Images/logo/logo.png">
+    <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Cinnamoncity Hikkaduwa" />
+  <meta name="keywords" content="Cinnamon City" />
+  <meta name="author" content="Cinnamoncity Hikkaduwa" />
+  <link rel="canonical" href="https://pesaradam.github.io/Cinnamoncity-Hikkaduwa/" />
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LodgingBusiness",
+  "name": "Cinnamoncity Hikkaduwa Villa",
+  "image": "https://yourwebsite.com/images/villa-front.jpg",
+  "description": "estled just minutes from the golden beach, our little haven blends island charm with modern comfort — where every sunrise brings the promise of calm seas, warm smiles, and unforgettable memories.",
+  "url": "https://pesaradam.github.io/Cinnamoncity-Hikkaduwa/",
+  "telephone": "+94 77 370 6061",
+  "priceRange": "$$",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "No. 29, Kuruduwattha",
+    "addressLocality": "Hikkaduwa",
+    "addressRegion": "Southern Province",
+    "postalCode": "80240",
+    "addressCountry": "LK"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 6.142406798716194,
+    "longitude": 80.10104087876898
+  },
+  "amenityFeature": [
+    {
+      "@type": "LocationFeatureSpecification",
+      "name": "Free Wi-Fi",
+      "value": true
+    },
+    {
+      "@type": "LocationFeatureSpecification",
+      "name": "Air Conditioning",
+      "value": true
+    },
+    {
+      "@type": "LocationFeatureSpecification",
+      "name": "Beach Access",
+      "value": true
+    }
+  ],
+  "sameAs": [
+    "https://www.facebook.com/cinnamoncityhikkaduwa",
+    "https://www.instagram.com/cinnamoncityhikkaduwa"
+  ]
+}
+</script>
+
+
     <style>
         * {
             margin: 0;
@@ -1006,4 +1066,5 @@ The Cinnamon City Hikkaduwa Team</p>
 </body>
 
 </html>
+
 
