--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/x-icon" href="/Images/logo/logo.png">
     <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Cinnamoncity Hikkaduwa" />
+  <meta name="description" content="Cinnamon City Hikkaduwa" />
   <meta name="keywords" content="Cinnamon City" />
   <meta name="author" content="Cinnamoncity Hikkaduwa" />
   <link rel="canonical" href="https://pesaradam.github.io/Cinnamoncity-Hikkaduwa/" />
@@ -1066,5 +1066,6 @@ The Cinnamon City Hikkaduwa Team</p>
 </body>
 
 </html>
+
 
 
