--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinnamon City Hikkaduwa </title>
+    
+<!-- Favicon (tab icon) -->
+    <link rel="icon" type="image/png" href="Images/logo.png">
+    
     <link rel="icon" type="image/x-icon" href="/Images/logo/logo.png">
     <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -1066,6 +1070,7 @@ The Cinnamon City Hikkaduwa Team</p>
 </body>
 
 </html>
+
 
 
 
