--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title>Cinnamon City Hikkaduwa </title>
     
 <!-- Favicon (tab icon) -->
-    <link rel="icon" type="image/png" href="Images/logo.png">
+    <link rel="icon" type="image/png" href="Images/logo/logo.jpg">
     
-    <link rel="icon" type="image/x-icon" href="/Images/logo/logo.png">
+    <link rel="icon" type="image/x-icon" href="/Images/logo/logo.jpg">
     <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Cinnamon City Hikkaduwa" />
@@ -1070,6 +1070,7 @@ The Cinnamon City Hikkaduwa Team</p>
 </body>
 
 </html>
+
 
 
 
