--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta property="og:title" content="Cinnamon City Hikkaduwa">
-<meta property="og:description" content="Discover the future of tourism">
+<meta property="og:description" content="Experience Premium Luxury">
 <meta property="og:image" content="https://pesaradam.github.io/Cinnamoncity-Hikkaduwa/Images/Banner.jpg">
 <meta property="og:url" content="https://pesaradam.github.io/Cinnamoncity-Hikkaduwa/">
 <meta name="twitter:card" content="summary_large_image">
@@ -12,20 +12,24 @@
     <title>Cinnamon City Hikkaduwa </title>
     
 <!-- Favicon (tab icon) -->
-    <link rel="icon" type="image/png" href="Images/logo/logo.jpg">
+    <link rel="icon" type="image/png" href="Images/logo/logo.png">
+
+    <!-- Icon for mobile home screen -->
+    <link rel="apple-touch-icon" href="Images/logo/logo.jpg">
+    <link rel="shortcut icon" href="Images/logo/logo.png" type="image/png">
     
     <link rel="icon" type="image/x-icon" href="/Images/logo/logo.jpg">
     <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Cinnamon City Hikkaduwa" />
   <meta name="keywords" content="Cinnamon City" />
-  <meta name="author" content="Cinnamoncity Hikkaduwa" />
+  <meta name="author" content="Cinnamon City Hikkaduwa" />
   <link rel="canonical" href="https://pesaradam.github.io/Cinnamoncity-Hikkaduwa/" />
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "LodgingBusiness",
-  "name": "Cinnamoncity Hikkaduwa Villa",
+  "name": "Cinnamon City Hikkaduwa",
   "image": "https://yourwebsite.com/images/villa-front.jpg",
   "description": "estled just minutes from the golden beach, our little haven blends island charm with modern comfort — where every sunrise brings the promise of calm seas, warm smiles, and unforgettable memories.",
   "url": "https://pesaradam.github.io/Cinnamoncity-Hikkaduwa/",
@@ -1070,6 +1074,7 @@ The Cinnamon City Hikkaduwa Team</p>
 </body>
 
 </html>
+
 
 
 
